had to update the name of the index file to have a lowercase 'i'

--- a/Index.html
+++ b/Index.html
@@ -7,6 +7,7 @@
     <title>CSS Snippet Cheat Sheet</title>
 </head>
 <body>
+    
     <header>CSS Snippet Cheat Sheet</header>
         <p id="p1">Ever have trouble recalling the exact syntax for your favorite CSS code?  Give it a permanent home and add it to this page!  Select any snippet below and it'll automatically select all of the code for your to copy</p>
     
@@ -39,7 +40,7 @@
             <div class="box">
                 <header class="box-head">CCS Grid Layout</header>
                 <p class="box-p">Build a 12-column layout using CSS grid</p>
-                <div class="second-box">
+                <div class="second-box2">
                     <pre>
     .grid {
         display: grid;
@@ -52,7 +53,7 @@
             <div class="box-second">
                 <header class="box-head">Linear Gradients</header>
                 <p class="box-p">This will create a background linear gradient from top to bottom. </p>
-                <div class="second-box">
+                <div class="second-box2">
                     <pre>
     .linear-gradient-background {
         backgroun-image: linear-gradient(
@@ -66,7 +67,7 @@
             <div class="box-second">
                 <header class="box-head">Box Transition Glow</header>
                 <p class="box-p">Use transitions and box shadows to glow on hover.</p>
-                <div class="second-box">
+                <div class="second-box2">
                     <pre>
     .row {
     border-radius: 8px;
@@ -87,7 +88,7 @@
             <div class="box-second">
                 <header class="box-head">Overlay Card with TItle</header>
                 <p class="box-p">Use position properties and negative margins to raise elements higher than their natural starting point.</p>
-                    <div class="second-box">
+                    <!-- <div class="second-box2"> -->
                         <pre>
     .card-header {
     position: relative;
